# python-fi-collar

./: .gitignore  pyproject.toml  setup.py
fi/: __init__.py  _http.py  client.py  queries.py
tests/: fixtures.py  test_client.py  test_introspection.py  test_queries.py
